package lab.`is`.bank.deposit.database.entity

enum class MoneyType {
    RULEON, //рулеоны
    GALEON, //галеоны
    EULEON //еслеоны
}