package lab.`is`.bank.deposit.database.entity.transaction

enum class TransactionStatus {
    FAILED,
    SUCCEEDED
}