package lab.`is`.bank.deposit.database.entity.transaction

enum class TransactionType {
    DEPOSITING,
    CREATE,
    TRANSFER,
    WITHDRAW
}